lesson50/k8s-log-platform/k8s/base/networkpolicies/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: log-ingestion-netpol
  namespace: log-platform
spec:
  podSelector:
    matchLabels:
      app: log-ingestion
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - port: 8000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - port: 9092
    - to: []
      ports:
        - port: 53
          protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: log-platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
